--- a/ecommerce-vtex/package.json
+++ b/ecommerce-vtex/package.json
@@ -16,7 +16,6 @@
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "@types/react-helmet": "^6.1.6",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react": "^4.0.0",
@@ -25,6 +24,8 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "typescript": "^5.0.2",
     "vite": "^4.3.2"
   }
